Removed tests (makes no sense to support in this small project). Fixed css issue: sometimes line wrap occurs before right quote icon, now it is prevented.

--- a/src/Quote.css
+++ b/src/Quote.css
@@ -1,3 +1,7 @@
 blockquote {
 	margin: 0;
 }
+
+blockquote p .fa {
+	display: inline;
+}
